--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,1 +1,179 @@
+/* FUENTES */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=PT+Serif:wght@400;700&family=Poppins:wght@400;600&display=swap');
+/* VARIABLES */
+/* GLOBAL RESET */
+* {
+	box-sizing : border-box;
+	margin     : 0;
+	padding    : 0;
+}
 
+html {
+	font-size : 62.5%;
+}
+
+h1 {
+	color       : #000000;
+	font-family : 'PT Serif', serif;
+	font-size   : 3.6rem;
+	font-weight : 700;
+}
+
+h2 {
+	color       : #000000;
+	font-family : 'Poppins', sans-serif;
+	font-size   : 1.8rem;
+	font-weight : 600;
+}
+
+figcaption {
+	color       : #000000;
+	font-family : 'Poppins', sans-serif;
+	font-size   : 1.4rem;
+	font-weight : 600;
+}
+
+h3 {
+	color       : #000000;
+	font-family : 'PT Serif', serif;
+	font-size   : 1rem;
+	font-weight : 400;
+}
+
+h4 {
+	color       : #A9A9A9;
+	font-family : 'Montserrat', sans-serif;
+	font-size   : 1.4rem;
+	font-weight : 500;
+}
+
+p {
+	color       : #000000;
+	font-family : 'Poppins', sans-serif;
+	font-size   : 1.4rem;
+	font-weight : 400;
+}
+
+.container {
+	margin    : 0 auto;
+	max-width : 37.5rem;
+	width     : 95%;
+}
+
+@media screen and (min-width : 1024px) {
+	.container {
+		max-width : 144rem;
+		width     : 70%;
+	}
+}
+
+/* HEADER STYLES */
+.header {
+	padding-top : 7.1rem;
+}
+
+@media screen and (min-width : 1024px) {
+	.header {
+		padding-top : 10rem;
+	}
+	
+	.header__container {
+		display : flex;
+	}
+}
+
+.header h1 {
+	flex          : 1;
+	margin-bottom : 3.8rem;
+}
+
+.header__info {
+	flex          : 1;
+	margin-bottom : 6rem;
+}
+
+.header__info h2 {
+	margin-bottom  : 1rem;
+	text-transform : uppercase;
+}
+
+.header__info p {
+	max-width : 60%;
+}
+
+/* TEAM STYLES */
+.team {
+	margin        : 0 auto;
+	margin-bottom : 13.4rem;
+	max-width     : 37.5rem;
+	width         : 90%;
+}
+
+@media screen and (min-width : 1024px) {
+	.team {
+		max-width : 144rem;
+		width     : 70%;
+	}
+}
+
+.team__container {
+	display               : grid;
+	column-gap            : 2.5rem;
+	grid-template-columns : repeat(2, 1fr);
+}
+
+@media screen and (min-width : 1024px) {
+	.team__container {
+		column-gap            : 6rem;
+		grid-template-columns : repeat(3, 1fr);
+		justify-content       : center;
+		row-gap               : 3rem;
+	}
+}
+
+.team__box {
+	display    : flex;
+	margin-top : 2rem;
+}
+
+.team__box-image img {
+	margin-bottom : 1rem;
+	width         : 100%;
+}
+
+.team__box-title {
+	margin-left    : 0.45rem;
+	text-transform : uppercase;
+	writing-mode   : vertical-rl;
+}
+
+.team__box:nth-child(2n) {
+	margin-top : 10rem;
+}
+
+@media screen and (min-width : 1024px) {
+	.team__box:nth-child(2n) {
+		margin-top : 0;
+	}
+}
+
+@media screen and (min-width : 1024px) {
+	.team__box:nth-child(2) {
+		margin-top : 0;
+	}
+	
+	.team__box:nth-child(3n+2) {
+		margin-top : 12rem;
+	}
+}
+
+/* CREDITS */
+.credits {
+	padding-bottom : 2.4rem;
+	text-align     : center;
+}
+
+.credits h4 strong {
+	font-weight     : 700;
+	text-decoration : underline;
+}
